docs/tests/nameres/control_flow/valid/ForShadow.src
// Valid

fn int main() {
    let int j = 3;
    let int k = 4;
    for (j = 3; j < 4; j++) {
        let int k = 4;
    }
}