docs/tests/nameres/control_flow/invalid/ForOutOfScope.src
// Invalid

fn void main() {
    for (; ;) {
        let int j = 3;
    }

    for (; ;) {
        j = 3;
    }
}